--- a/ShutdownWithUpdates/ShutdownWithUpdates/ShutdownWithUpdates.vcproj
+++ b/ShutdownWithUpdates/ShutdownWithUpdates/ShutdownWithUpdates.vcproj
@@ -205,6 +205,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\event_log_reporter.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Main.h"
 				>
 			</File>
